--- a/package.json
+++ b/package.json
@@ -10,17 +10,20 @@
     "lint:check": "next lint"
   },
   "dependencies": {
+    "@heroicons/react": "^2.2.0",
     "@radix-ui/react-accordion": "^1.2.11",
     "@radix-ui/react-slot": "^1.2.3",
     "@radix-ui/react-toast": "^1.2.14",
     "class-variance-authority": "^0.7.1",
-    "framer-motion": "^12.15.0",
+    "framer-motion": "^12.17.0",
     "lucide-react": "^0.511.0",
     "my-next-app": "file:",
     "next": "15.3.2",
     "next-themes": "^0.4.6",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "react-icons": "^5.5.0",
+    "react-parallax-tilt": "^1.7.297"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
